# rust-wrapbin

./: .cliff.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  release-plz.toml  tarpaulin-report.html
.github/: settings.yml
.github/workflows/: gh-pages.yml  release-plz.yml  rust.yml  security-audit.yml  typos.yml
src/: error.rs  lib.rs
src/repr/: array.rs  base64.rs  dump.rs  mod.rs  string.rs
tests/: lorem_ipsum_a.txt  lorem_ipsum_b.txt  lorem_ipsum_s.txt  test_array.rs  test_base64.rs  test_dump_color.rs  test_dump_no_color.rs  test_fmt.rs  test_lib.rs  test_primitives.rs  test_string.rs
